--- a/wordorderbha.htm
+++ b/wordorderbha.htm
@@ -1083,14 +1083,14 @@ var listener = function(e) {
     }
 }
 
-var Punctuation = '\u002E';
+var Punctuation = '\u002F\u003F';
 
 var Openers = '';
 var CorrectResponse = 'Correct!';
 var IncorrectResponse = 'Sorry! Try again.';
 var ThisMuchCorrect = 'This much of your answer is correct:';
 var TheseAnswersToo = 'These answers are also correct:';
-var YourScoreIs = '';
+var YourScoreIs = 'Your score is: ';
 var NextCorrect = 'The next correct part is: ';
 var FeedbackWidth = 200; //default
 var ExBGColor = getComputedStyle(document.documentElement).getPropertyValue('--strExBGColor');
@@ -1391,39 +1391,31 @@ function CheckAnswer(CheckType){
 
 var Segments = new Array();
 Segments[0] = new Array();
-Segments[0][0] = '\u0C1A\u0C3F\u0C28\u0C4D\u0C28\u0C2A\u0C4D\u0C2A\u0C41\u0C21\u0C41';
-Segments[0][1] = 2;
+Segments[0][0] = '\u0C1A\u0C42\u0C38\u0C3E\u0C30\u0C3E\u0020\u002F\u0063\u0068\u006F\u006F\u0073\u0061\u0061\u0072\u0061\u0061\u002F';
+Segments[0][1] = 4;
 Segments[0][2] = 0;
 Segments[1] = new Array();
-Segments[1][0] = '\u0C35\u0C3E\u0C33\u0C4D\u0C33\u0C2E\u0C41';
-Segments[1][1] = 6;
+Segments[1][0] = '\u0C2D\u0C35\u0C28\u0C2E\u0C41\u0020\u002F\u0062\u0068\u0061\u0076\u0061\u006E\u0061\u006D\u0075\u002F';
+Segments[1][1] = 3;
 Segments[1][2] = 0;
 Segments[2] = new Array();
-Segments[2][0] = '\u0C35\u0C4D\u0C30\u0C3E\u0C38\u0C47';
-Segments[2][1] = 5;
+Segments[2][0] = '\u0C2E\u0C40\u0C30\u0C41\u0020\u002F\u006D\u0065\u0065\u0072\u0075\u002F';
+Segments[2][1] = 1;
 Segments[2][2] = 0;
 Segments[3] = new Array();
-Segments[3][0] = '\u0C2E\u0C40\u0C26\u0C3E';
-Segments[3][1] = 4;
+Segments[3][0] = '\u0C30\u0C3E\u0C1C\u0020\u002F\u0072\u0061\u0061\u006A\u0061\u002F';
+Segments[3][1] = 2;
 Segments[3][2] = 0;
 Segments[4] = new Array();
-Segments[4][0] = '\u0C2E\u0C47\u0C2E\u0C41';
-Segments[4][1] = 1;
+Segments[4][0] = '\u003F';
+Segments[4][1] = 5;
 Segments[4][2] = 0;
-Segments[5] = new Array();
-Segments[5][0] = '\u0C2A\u0C3E\u0C32\u0C15';
-Segments[5][1] = 3;
-Segments[5][2] = 0;
-Segments[6] = new Array();
-Segments[6][0] = '\u002E';
-Segments[6][1] = 7;
-Segments[6][2] = 0;
 
 
 var GuessSequence = new Array();
 
 var Answers = new Array();
-Answers[0] = new Array(1,2,3,4,5,6,7);
+Answers[0] = new Array(1,2,3,4,5);
 
 
 function doDrag(e) {
@@ -1796,7 +1788,7 @@ function TimerStartUp(){
 </div>
 
 <div id="InstructionsDiv" class="StdDiv">
-	<div id="Instructions">Put the parts in order to form a sentence. When you think your answer is correct, click on "Check" to check your answer. If you get stuck, click on "Hint" to find out the next correct part.</div>
+	<div id="Instructions">Put the words in order to form a sentence. When you think your answer is correct, click on "Check" to check your answer. If you get stuck, click on "Hint" to find out the next correct part.</div>
 </div>
 
 
