--- a/wordorderpa.htm
+++ b/wordorderpa.htm
@@ -4,11 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
 <meta name="dc:creator" content="Rangoo" />
+<meta name="dc:title" content="Word Order" />
 
 
 
 <title>
-
+Word Order
 </title>
 
 <!-- Made with executable version 7.0 Release 3 Build 0 -->
@@ -1083,7 +1084,7 @@ var listener = function(e) {
     }
 }
 
-var Punctuation = '\u002E';
+var Punctuation = '\u002F\u002E';
 
 var Openers = '';
 var CorrectResponse = 'Correct!';
@@ -1391,28 +1392,28 @@ function CheckAnswer(CheckType){
 
 var Segments = new Array();
 Segments[0] = new Array();
-Segments[0][0] = '\u0C1A\u0C3F\u0C28\u0C4D\u0C28\u0C2A\u0C4D\u0C2A\u0C41\u0C21\u0C41';
+Segments[0][0] = '\u0C1A\u0C3F\u0C28\u0C4D\u0C28\u0C2A\u0C4D\u0C2A\u0C41\u0C21\u0C41\u0020\u002F\u0063\u0068\u0069\u006E\u006E\u0061\u0070\u0070\u0075\u0064\u0075\u002F';
 Segments[0][1] = 2;
 Segments[0][2] = 0;
 Segments[1] = new Array();
-Segments[1][0] = '\u0C35\u0C3E\u0C33\u0C4D\u0C33\u0C2E\u0C41';
+Segments[1][0] = '\u0C35\u0C3E\u0C33\u0C4D\u0C33\u0C2E\u0C41\u0020\u002F\u0076\u0061\u0061\u006C\u006C\u0061\u006D\u0075\u002F';
 Segments[1][1] = 6;
 Segments[1][2] = 0;
 Segments[2] = new Array();
-Segments[2][0] = '\u0C35\u0C4D\u0C30\u0C3E\u0C38\u0C47';
+Segments[2][0] = '\u0C35\u0C4D\u0C30\u0C3E\u0C38\u0C47\u0020\u002F\u0076\u0072\u0061\u0061\u0073\u0065\u002F';
 Segments[2][1] = 5;
 Segments[2][2] = 0;
 Segments[3] = new Array();
-Segments[3][0] = '\u0C2E\u0C40\u0C26\u0C3E';
+Segments[3][0] = '\u0C2E\u0C40\u0C26\u0C3E\u0020\u002F\u006D\u0065\u0065\u0064\u0061\u0061\u002F';
 Segments[3][1] = 4;
 Segments[3][2] = 0;
 Segments[4] = new Array();
-Segments[4][0] = '\u0C2E\u0C47\u0C2E\u0C41';
-Segments[4][1] = 1;
+Segments[4][0] = '\u0C2A\u0C3E\u0C32\u0C15\u0020\u002F\u0070\u0061\u006C\u0061\u006B\u0061\u002F';
+Segments[4][1] = 3;
 Segments[4][2] = 0;
 Segments[5] = new Array();
-Segments[5][0] = '\u0C2A\u0C3E\u0C32\u0C15';
-Segments[5][1] = 3;
+Segments[5][0] = '\u0C2E\u0C47\u0C2E\u0C41\u0020\u002F\u006D\u0065\u006D\u0075\u002F';
+Segments[5][1] = 1;
 Segments[5][2] = 0;
 Segments[6] = new Array();
 Segments[6][0] = '\u002E';
@@ -1787,7 +1788,7 @@ function TimerStartUp(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle"></h2>
+	<h2 class="ExerciseTitle">Word Order</h2>
 
 	<h3 class="ExerciseSubtitle">Put the words in order and make a meaningful sentence.</h3>
 
@@ -1796,7 +1797,7 @@ function TimerStartUp(){
 </div>
 
 <div id="InstructionsDiv" class="StdDiv">
-	<div id="Instructions">Put the parts in order to form a sentence. When you think your answer is correct, click on "Check" to check your answer. If you get stuck, click on "Hint" to find out the next correct part.</div>
+	<div id="Instructions">Put the words in order to form a sentence. When you think your answer is correct, click on "Check" to check your answer. If you get stuck, click on "Hint" to find out the next correct part.</div>
 </div>
 
 
