Learn Telugu Classes Quiz
After watching the attending the classes or after watching the video the learners are expected to take a quiz to assess their understanding.

--- a/letterspa.htm
+++ b/letterspa.htm
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
 <meta name="dc:creator" content="Rangoo" />
-<meta name="dc:title" content="Reading Skill" />
+<meta name="dc:title" content="Read the Letters" />
 
 
 
 <title>
-Reading Skill
+Read the Letters
 </title>
 
 <!-- Made with executable version 7.0 Release 3 Build 0 -->
@@ -42,10 +42,10 @@ Reading Skill
 	--strLinkColor:      #ffffff;
 	--strVLinkColor:     #ffff80;
 	
-	--strNavBarColor:    #004000;
-	--strNavLightColor:  #7f9f7f;
-	--strNavShadeColor:  #002000;
-	--strNavTextColor:   #ffffff;
+	--strNavBarColor:    #ffffff;
+	--strNavLightColor:  #ffffff;
+	--strNavShadeColor:  #7f7f7f;
+	--strNavTextColor:   #000000;
 	
 	--strPageBGColor:    #004000;
 	--strExBGColor:      #004000;
@@ -954,7 +954,7 @@ function ClearTextBoxes(){
 //JQUIZ CORE JAVASCRIPT CODE
 
 var CurrQNum = 0;
-var CorrectIndicator = '&#x2714;';
+var CorrectIndicator = '?';
 var IncorrectIndicator = 'x';
 var YourScoreIs = '';
 
@@ -964,7 +964,7 @@ var ExerciseCompleted = 'You have completed the exercise.';
 var ShowCompletedSoFar = true;
 
 var ContinuousScoring = true;
-var CorrectFirstTime = 'Questions answered correctly first time: ';
+var CorrectFirstTime = 'Questions answered correctly the first time:';
 var ShowCorrectFirstTime = true;
 var ShuffleQs = false;
 var ShuffleAs = true;
@@ -1562,15 +1562,15 @@ function CheckFinished(){
 <div class="NavButtonBar" id="TopNavBar">
 
 
-<button class="NavButton" onclick="history.back(); return false;">&lt;=</button>
+<button class="NavButton" onclick="history.back(); return false;">Previous</button>
 
 
 
-<button class="NavButton" onclick="location='contents.htm'; return false;"> Index </button>
+<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='nextpage.htm'; return false;">Next</button>
 
 
 </div>
@@ -1580,7 +1580,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Reading Skill</h2>
+	<h2 class="ExerciseTitle">Read the Letters</h2>
 
 	<h3 class="ExerciseSubtitle">Learn to read the letters, words and sentences.</h3>
 
@@ -1606,11 +1606,11 @@ function CheckFinished(){
 </p>
 
 <div id="OneByOneReadout">
-<button id="PrevQButton" class="FuncButton" onclick="ChangeQ(-1); return false;">&lt;=</button>
+<button id="PrevQButton" class="FuncButton" onclick="ChangeQ(-1); return false;">Previous</button>
 
 <span id="QNumReadout" class="QNum">&#160;</span>
 
-<button id="NextQButton" class="FuncButton" onclick="ChangeQ(1); return false;">=&gt;</button>
+<button id="NextQButton" class="FuncButton" onclick="ChangeQ(1); return false;">Next</button>
 <br />
 </div>
 
@@ -1639,15 +1639,15 @@ function CheckFinished(){
 <div class="NavButtonBar" id="BottomNavBar">
 
 
-<button class="NavButton" onclick="history.back(); return false;">&lt;=</button>
+<button class="NavButton" onclick="history.back(); return false;">Previous</button>
 
 
 
-<button class="NavButton" onclick="location='contents.htm'; return false;"> Index </button>
+<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='nextpage.htm'; return false;">Next</button>
 
 
 </div>
