--- a/letterspa.htm
+++ b/letterspa.htm
@@ -42,10 +42,10 @@ Read the Letters
 	--strLinkColor:      #ffffff;
 	--strVLinkColor:     #ffff80;
 	
-	--strNavBarColor:    #ffffff;
-	--strNavLightColor:  #ffffff;
-	--strNavShadeColor:  #7f7f7f;
-	--strNavTextColor:   #000000;
+	--strNavBarColor:    #004000;
+	--strNavLightColor:  #7f9f7f;
+	--strNavShadeColor:  #002000;
+	--strNavTextColor:   #ffffff;
 	
 	--strPageBGColor:    #004000;
 	--strExBGColor:      #004000;
@@ -1570,7 +1570,7 @@ function CheckFinished(){
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">Next</button>
+<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordsmatch.htm'; return false;">Next</button>
 
 
 </div>
@@ -1647,7 +1647,7 @@ function CheckFinished(){
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">Next</button>
+<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordsmatch.htm'; return false;">Next</button>
 
 
 </div>
