--- a/wordmatch.htm
+++ b/wordmatch.htm
@@ -1518,23 +1518,6 @@ function CheckAnswers(){
 <!-- BeginTopNavButtons -->
 
 
-<div class="NavButtonBar" id="TopNavBar">
-
-
-<button class="NavButton" onclick="history.back(); return false;">Previous</button>
-
-
-
-<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
-
-
-
-<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordorderpa.htm'; return false;">Next</button>
-
-
-</div>
-
-
 
 <!-- EndTopNavButtons -->
 
@@ -1548,7 +1531,7 @@ function CheckAnswers(){
 </div>
 
 <div id="InstructionsDiv" class="StdDiv">
-	<div id="Instructions">Match the items on the right to the items on the left.</div>
+	<div id="Instructions">Drag the words to match</div>
 </div>
 
 
