--- a/wordorder3.htm
+++ b/wordorder3.htm
@@ -1083,7 +1083,7 @@ var listener = function(e) {
     }
 }
 
-var Punctuation = '\u002F\u003F';
+var Punctuation = '\u002F\u002E';
 
 var Openers = '';
 var CorrectResponse = 'Correct!';
@@ -1391,23 +1391,23 @@ function CheckAnswer(CheckType){
 
 var Segments = new Array();
 Segments[0] = new Array();
-Segments[0][0] = '\u0C1A\u0C42\u0C38\u0C3E\u0C30\u0C3E\u0020\u002F\u0063\u0068\u006F\u006F\u0073\u0061\u0061\u0072\u0061\u0061\u002F';
+Segments[0][0] = '\u0C2C\u0C32\u0C35\u0C02\u0C24\u0C41\u0C21\u0C41\u0020\u002F\u0062\u0061\u006C\u0061\u0076\u0061\u006E\u0074\u0075\u0064\u0075\u002F';
 Segments[0][1] = 4;
 Segments[0][2] = 0;
 Segments[1] = new Array();
-Segments[1][0] = '\u0C2D\u0C35\u0C28\u0C2E\u0C41\u0020\u002F\u0062\u0068\u0061\u0076\u0061\u006E\u0061\u006D\u0075\u002F';
-Segments[1][1] = 3;
+Segments[1][0] = '\u0C05\u0C2C\u0C4D\u0C2C\u0C3E\u0C2F\u0C3F\u0020\u002F\u0061\u0062\u0062\u0061\u0061\u0079\u0069\u002F';
+Segments[1][1] = 2;
 Segments[1][2] = 0;
 Segments[2] = new Array();
-Segments[2][0] = '\u0C2E\u0C40\u0C30\u0C41\u0020\u002F\u006D\u0065\u0065\u0072\u0075\u002F';
-Segments[2][1] = 1;
+Segments[2][0] = '\u0C1A\u0C3E\u0C32\u0C3E\u0020\u002F\u0063\u0068\u0061\u0061\u006C\u0061\u0061\u002F';
+Segments[2][1] = 3;
 Segments[2][2] = 0;
 Segments[3] = new Array();
-Segments[3][0] = '\u0C30\u0C3E\u0C1C\u0020\u002F\u0072\u0061\u0061\u006A\u0061\u002F';
-Segments[3][1] = 2;
+Segments[3][0] = '\u0C2E\u0C3E\u0020\u002F\u006D\u0061\u0061\u002F';
+Segments[3][1] = 1;
 Segments[3][2] = 0;
 Segments[4] = new Array();
-Segments[4][0] = '\u003F';
+Segments[4][0] = '\u002E';
 Segments[4][1] = 5;
 Segments[4][2] = 0;
 
@@ -1756,23 +1756,6 @@ function TimerStartUp(){
 
 <body onload="TimerStartUp()" id="TheBody" > 
 <!-- BeginTopNavButtons -->
-
-
-<div class="NavButtonBar" id="TopNavBar">
-
-
-<button class="NavButton" onclick="history.back(); return false;">Previous</button>
-
-
-
-<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
-
-
-
-<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordorderbha.htm'; return false;">Next</button>
-
-
-</div>
 
 
 
