--- a/wordspa.htm
+++ b/wordspa.htm
@@ -1158,32 +1158,32 @@ I[0][2]='0';
 I[0][3]=new Array();
 I[0][3][0]=new Array('bandi','This is \u0C2C\u0C02\u0C21\u0C3F.',0,0,1);
 I[0][3][1]=new Array('phalamu','This is \u0C2B\u0C32\u0C2E\u0C41.',0,0,1);
-I[0][3][2]=new Array('palaka','Correct! This is \u0C2A\u0C32\u0C15.',1,100,1);
-I[0][3][3]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[0][3][2]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[0][3][3]=new Array('palaka','Correct! This is \u0C2A\u0C32\u0C15.',1,100,1);
 I[1]=new Array();I[1][0]=100;
 I[1][1]='';
 I[1][2]='0';
 I[1][3]=new Array();
 I[1][3][0]=new Array('bandi','Correct! This is \u0C2C\u0C02\u0C21\u0C3F.',1,100,1);
 I[1][3][1]=new Array('phalamu','This is \u0C2B\u0C32\u0C2E\u0C41.',0,0,1);
-I[1][3][2]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
-I[1][3][3]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[1][3][2]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[1][3][3]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
 I[2]=new Array();I[2][0]=100;
 I[2][1]='';
 I[2][2]='0';
 I[2][3]=new Array();
 I[2][3][0]=new Array('bandi','This is \u0C2C\u0C02\u0C21\u0C3F.',0,0,1);
 I[2][3][1]=new Array('phalamu','Correct! This is \u0C2B\u0C32\u0C2E\u0C41.',1,100,1);
-I[2][3][2]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
-I[2][3][3]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[2][3][2]=new Array('bhavanamu','This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',0,0,1);
+I[2][3][3]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
 I[3]=new Array();I[3][0]=100;
 I[3][1]='';
 I[3][2]='0';
 I[3][3]=new Array();
 I[3][3][0]=new Array('bandi','This is \u0C2C\u0C02\u0C21\u0C3F.',0,0,1);
 I[3][3][1]=new Array('phalamu','This is \u0C2B\u0C32\u0C2E\u0C41.',0,0,1);
-I[3][3][2]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
-I[3][3][3]=new Array('bhavanamu','Correct! This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',1,100,1);
+I[3][3][2]=new Array('bhavanamu','Correct! This is \u0C2D\u0C35\u0C28\u0C2E\u0C41.',1,100,1);
+I[3][3][3]=new Array('palaka','This is \u0C2A\u0C32\u0C15.',0,0,1);
 
 
 function StartUp(){
@@ -1558,23 +1558,6 @@ function CheckFinished(){
 <!-- BeginTopNavButtons -->
 
 
-<div class="NavButtonBar" id="TopNavBar">
-
-
-<button class="NavButton" onclick="history.back(); return false;">Previous</button>
-
-
-
-<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
-
-
-
-<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordspa.htm'; return false;">Next</button>
-
-
-</div>
-
-
 
 <!-- EndTopNavButtons -->
 
@@ -1616,10 +1599,10 @@ function CheckFinished(){
 </div>
  
 <ol class="QuizQuestions" id="Questions">
-<li class="QuizQuestion" id="Q_0" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2A;&#x0C32;&#x0C15;</div><ol class="MCAnswers"><li id="Q_0_0"><button class="FuncButton" id="Q_0_0_Btn" onclick="CheckMCAnswer(0,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_0_1"><button class="FuncButton" id="Q_0_1_Btn" onclick="CheckMCAnswer(0,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_0_2"><button class="FuncButton" id="Q_0_2_Btn" onclick="CheckMCAnswer(0,2,this)">?</button>&#160;&#160;palaka</li><li id="Q_0_3"><button class="FuncButton" id="Q_0_3_Btn" onclick="CheckMCAnswer(0,3,this)">?</button>&#160;&#160;bhavanamu</li></ol></li>
-<li class="QuizQuestion" id="Q_1" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2C;&#x0C02;&#x0C21;&#x0C3F;</div><ol class="MCAnswers"><li id="Q_1_0"><button class="FuncButton" id="Q_1_0_Btn" onclick="CheckMCAnswer(1,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_1_1"><button class="FuncButton" id="Q_1_1_Btn" onclick="CheckMCAnswer(1,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_1_2"><button class="FuncButton" id="Q_1_2_Btn" onclick="CheckMCAnswer(1,2,this)">?</button>&#160;&#160;palaka</li><li id="Q_1_3"><button class="FuncButton" id="Q_1_3_Btn" onclick="CheckMCAnswer(1,3,this)">?</button>&#160;&#160;bhavanamu</li></ol></li>
-<li class="QuizQuestion" id="Q_2" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2B;&#x0C32;&#x0C2E;&#x0C41;.</div><ol class="MCAnswers"><li id="Q_2_0"><button class="FuncButton" id="Q_2_0_Btn" onclick="CheckMCAnswer(2,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_2_1"><button class="FuncButton" id="Q_2_1_Btn" onclick="CheckMCAnswer(2,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_2_2"><button class="FuncButton" id="Q_2_2_Btn" onclick="CheckMCAnswer(2,2,this)">?</button>&#160;&#160;palaka</li><li id="Q_2_3"><button class="FuncButton" id="Q_2_3_Btn" onclick="CheckMCAnswer(2,3,this)">?</button>&#160;&#160;bhavanamu</li></ol></li>
-<li class="QuizQuestion" id="Q_3" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2D;&#x0C35;&#x0C28;&#x0C2E;&#x0C41;</div><ol class="MCAnswers"><li id="Q_3_0"><button class="FuncButton" id="Q_3_0_Btn" onclick="CheckMCAnswer(3,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_3_1"><button class="FuncButton" id="Q_3_1_Btn" onclick="CheckMCAnswer(3,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_3_2"><button class="FuncButton" id="Q_3_2_Btn" onclick="CheckMCAnswer(3,2,this)">?</button>&#160;&#160;palaka</li><li id="Q_3_3"><button class="FuncButton" id="Q_3_3_Btn" onclick="CheckMCAnswer(3,3,this)">?</button>&#160;&#160;bhavanamu</li></ol></li></ol>
+<li class="QuizQuestion" id="Q_0" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2A;&#x0C32;&#x0C15;</div><ol class="MCAnswers"><li id="Q_0_0"><button class="FuncButton" id="Q_0_0_Btn" onclick="CheckMCAnswer(0,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_0_1"><button class="FuncButton" id="Q_0_1_Btn" onclick="CheckMCAnswer(0,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_0_2"><button class="FuncButton" id="Q_0_2_Btn" onclick="CheckMCAnswer(0,2,this)">?</button>&#160;&#160;bhavanamu</li><li id="Q_0_3"><button class="FuncButton" id="Q_0_3_Btn" onclick="CheckMCAnswer(0,3,this)">?</button>&#160;&#160;palaka</li></ol></li>
+<li class="QuizQuestion" id="Q_1" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2C;&#x0C02;&#x0C21;&#x0C3F;.</div><ol class="MCAnswers"><li id="Q_1_0"><button class="FuncButton" id="Q_1_0_Btn" onclick="CheckMCAnswer(1,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_1_1"><button class="FuncButton" id="Q_1_1_Btn" onclick="CheckMCAnswer(1,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_1_2"><button class="FuncButton" id="Q_1_2_Btn" onclick="CheckMCAnswer(1,2,this)">?</button>&#160;&#160;bhavanamu</li><li id="Q_1_3"><button class="FuncButton" id="Q_1_3_Btn" onclick="CheckMCAnswer(1,3,this)">?</button>&#160;&#160;palaka</li></ol></li>
+<li class="QuizQuestion" id="Q_2" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2B;&#x0C32;&#x0C2E;&#x0C41;.</div><ol class="MCAnswers"><li id="Q_2_0"><button class="FuncButton" id="Q_2_0_Btn" onclick="CheckMCAnswer(2,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_2_1"><button class="FuncButton" id="Q_2_1_Btn" onclick="CheckMCAnswer(2,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_2_2"><button class="FuncButton" id="Q_2_2_Btn" onclick="CheckMCAnswer(2,2,this)">?</button>&#160;&#160;bhavanamu</li><li id="Q_2_3"><button class="FuncButton" id="Q_2_3_Btn" onclick="CheckMCAnswer(2,3,this)">?</button>&#160;&#160;palaka</li></ol></li>
+<li class="QuizQuestion" id="Q_3" style="display: none;"><div class="QuestionText">Read the word and choose the correct option. &#x0C2D;&#x0C35;&#x0C28;&#x0C2E;&#x0C41;.</div><ol class="MCAnswers"><li id="Q_3_0"><button class="FuncButton" id="Q_3_0_Btn" onclick="CheckMCAnswer(3,0,this)">?</button>&#160;&#160;bandi</li><li id="Q_3_1"><button class="FuncButton" id="Q_3_1_Btn" onclick="CheckMCAnswer(3,1,this)">?</button>&#160;&#160;phalamu</li><li id="Q_3_2"><button class="FuncButton" id="Q_3_2_Btn" onclick="CheckMCAnswer(3,2,this)">?</button>&#160;&#160;bhavanamu</li><li id="Q_3_3"><button class="FuncButton" id="Q_3_3_Btn" onclick="CheckMCAnswer(3,3,this)">?</button>&#160;&#160;palaka</li></ol></li></ol>
 
 
 
@@ -1633,23 +1616,6 @@ function CheckFinished(){
 </div>
 
 <!-- BeginBottomNavButtons -->
-
-
-<div class="NavButtonBar" id="BottomNavBar">
-
-
-<button class="NavButton" onclick="history.back(); return false;">Previous</button>
-
-
-
-<button class="NavButton" onclick="location='https://www.want2learn.com/telugu/quiz-on-telugu-speaking-class'; return false;"> Want2Learn </button>
-
-
-
-<button class="NavButton" onclick="location='https://www.coursesuseek.com/wordspa.htm'; return false;">Next</button>
-
-
-</div>
 
 
 
