--- a/Complete.htm
+++ b/Complete.htm
@@ -1567,13 +1567,13 @@ function CheckAnswers(){
 <div id="L_2" class="CardStyle">............... &#x0C1A;&#x0C3E;&#x0C32;&#x0C3E; &#x0C2C;&#x0C32;&#x0C35;&#x0C02;&#x0C24;&#x0C41;&#x0C21;&#x0C41;.</div>
 <div id="L_3" class="CardStyle">&#x0C2E;&#x0C3E; &#x0C07;&#x0C02;&#x0C1F;&#x0C4D;&#x0C32;&#x0C4B; .............. &#x0C2A;&#x0C42;&#x0C35;&#x0C41;&#x0C32;&#x0C3E; &#x0C1A;&#x0C46;&#x0C1F;&#x0C4D;&#x0C1F;&#x0C41; &#x0C09;&#x0C02;&#x0C26;&#x0C3F;.</div>
 <div id="L_4" class="CardStyle">&#x0C28;&#x0C3E;&#x0C15;&#x0C41; ............... &#x0C30;&#x0C02;&#x0C17;&#x0C41; &#x0C05;&#x0C02;&#x0C1F;&#x0C47; &#x0C1A;&#x0C3E;&#x0C32;&#x0C3E; &#x0C07;&#x0C37;&#x0C4D;&#x0C1F;&#x0C02;.</div>
-<div id="L_5" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; &#x0C0E;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C48;&#x0C28;&#x0C3E; .............. &#x0C15;&#x0C3E;&#x0C02;&#x0C24;&#x0C3F;&#x0C32;&#x0C4B; &#x0C1A;&#x0C26;&#x0C41;&#x0C35;&#x0C41;&#x0C15;&#x0C41;&#x0C28;&#x0C4D;&#x0C28;&#x0C3E;&#x0C30;&#x0C3E; ?</div>
-<div id="L_6" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; ............... &#x0C1A;&#x0C28;&#x0C17;&#x0C3E; &#x0C2A;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41; &#x0C35;&#x0C3E;&#x0C21;&#x0C41;&#x0C24;&#x0C3E;&#x0C30;&#x0C3E;</div>
-<div id="L_7" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; ............... &#x0C0E;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C48;&#x0C28;&#x0C3E; &#x0C08;&#x0C24; &#x0C2A;&#x0C1F;&#x0C4D;&#x0C1F;&#x0C3E;&#x0C30;&#x0C3E;?</div>
+<div id="L_5" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; &#x0C0E;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C48;&#x0C28;&#x0C3E; .............. &#x0C15;&#x0C3E;&#x0C02;&#x0C24;&#x0C3F;&#x0C32;&#x0C4B;? &#x0C1A;&#x0C26;&#x0C41;&#x0C35;&#x0C41;&#x0C15;&#x0C41;&#x0C28;&#x0C4D;&#x0C28;&#x0C3E;&#x0C30;&#x0C3E; ?</div>
+<div id="L_6" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; ............... &#x0C1A;&#x0C28;&#x0C17;&#x0C3E; &#x0C2A;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41; &#x0C35;&#x0C3E;&#x0C21;&#x0C41;&#x0C24;&#x0C3E;&#x0C30;&#x0C3E;?</div>
+<div id="L_7" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; ............... &#x0C0E;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C48;&#x0C28;&#x0C3E; &#x0C08;&#x0C24; &#x0C15;&#x0C4A;&#x0C1F;&#x0C4D;&#x0C1F;&#x0C3E;&#x0C30;&#x0C3E;?<br /></div>
 <div id="L_8" class="CardStyle">&#x0C2E;&#x0C40;&#x0C30;&#x0C41; &#x0C0E;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C48;&#x0C28;&#x0C3E; ......... &#x0C2A;&#x0C3E;&#x0C32;&#x0C41; &#x0C24;&#x0C3E;&#x0C17;&#x0C3E;&#x0C30;&#x0C3E;?</div>
 <div id="L_9" class="CardStyle">&#x0C2E;&#x0C47;&#x0C2E;&#x0C41; &#x0C2C;&#x0C2F;&#x0C1F;&#x0C15;&#x0C3F; &#x0C35;&#x0C46;&#x0C33;&#x0C4D;&#x0C33;&#x0C3F;&#x0C28;&#x0C2A;&#x0C4D;&#x0C2A;&#x0C41;&#x0C21;&#x0C41; &#x0C07;&#x0C02;&#x0C1F;&#x0C3F;&#x0C15;&#x0C3F; ............. &#x0C1A;&#x0C47;&#x0C38;&#x0C3F; &#x0C35;&#x0C46;&#x0C33;&#x0C4D;&#x0C24;&#x0C3E;&#x0C2E;&#x0C41;. </div>
 <div id="R_0" class="CardStyle">&#x0C28;&#x0C37;&#x0C4D;&#x0C1F;&#x0C2E;&#x0C41; </div>
-<div id="R_1" class="CardStyle">&#x0C1A;&#x0C15;&#x0C4D;&#x0C15;&#x0C30; </div>
+<div id="R_1" class="CardStyle">&#x0C1A;&#x0C15;&#x0C4D;&#x0C30;&#x0C2E;&#x0C41;&#x00A0;</div>
 <div id="R_2" class="CardStyle">&#x0C2D;&#x0C40;&#x0C2E;&#x0C41;&#x0C21;&#x0C41;</div>
 <div id="R_3" class="CardStyle">&#x0C2E;&#x0C32;&#x0C4D;&#x0C32;&#x0C46; </div>
 <div id="R_4" class="CardStyle">&#x0C0E;&#x0C30;&#x0C41;&#x0C2A;&#x0C41; </div>
