--- a/wordorder1.htm
+++ b/wordorder1.htm
@@ -1408,12 +1408,12 @@ Segments[3][0] = '\u0C2E\u0C40\u0C26\u0C3E\u0020\u002F\u006D\u0065\u0065\u0064\u
 Segments[3][1] = 4;
 Segments[3][2] = 0;
 Segments[4] = new Array();
-Segments[4][0] = '\u0C2A\u0C3E\u0C32\u0C15\u0020\u002F\u0070\u0061\u006C\u0061\u006B\u0061\u002F';
-Segments[4][1] = 3;
+Segments[4][0] = '\u0C2E\u0C47\u0C2E\u0C41\u0020\u002F\u006D\u0065\u006D\u0075\u002F';
+Segments[4][1] = 1;
 Segments[4][2] = 0;
 Segments[5] = new Array();
-Segments[5][0] = '\u0C2E\u0C47\u0C2E\u0C41\u0020\u002F\u006D\u0065\u006D\u0075\u002F';
-Segments[5][1] = 1;
+Segments[5][0] = '\u0C2A\u0C32\u0C15\u002F\u0070\u0061\u006C\u0061\u006B\u0061\u002F';
+Segments[5][1] = 3;
 Segments[5][2] = 0;
 Segments[6] = new Array();
 Segments[6][0] = '\u002E';
